Revision history for Perl extension SDL2::FFI

{{$NEXT}}

    - not for broad use

0.07 2021-09-07T17:41:51Z

    - not for broad use

0.06 2021-09-05T03:24:11Z

    - not for broad use

0.05 2021-07-11T18:26:50Z

    - not for broad use

0.04 2021-07-11T00:04:42Z

    - not for broad use

0.03 2021-07-08T00:08:55Z

    - not for broad use

0.02 2021-07-07T04:40:35Z

    - not for broad use

0.01 2021-07-04T06:05:40Z

    - original version; not for broad use